[gd_scene load_steps=32 format=3 uid="uid://bj4r0dwh75vms"]

[ext_resource type="Script" path="res://scenes/UI/colors_settings.gd" id="1_6xqr5"]
[ext_resource type="PackedScene" uid="uid://dqlcupvcwr0bg" path="res://models/primitives/Tetrahedron.glb" id="2_l53qm"]
[ext_resource type="Shader" uid="uid://duqpvkiddfsbq" path="res://scenes/objects/hit_primitive_shader.tres" id="3_1hq7j"]
[ext_resource type="Shader" uid="uid://dwtsie8acu0c8" path="res://scenes/UI/remaining_primitives_ui_text_material.tres" id="4_7cq3k"]
[ext_resource type="FontFile" uid="uid://by8b56472lgfo" path="res://fonts/arialbd.ttf" id="5_ojbil"]
[ext_resource type="PackedScene" uid="uid://yuy73s31fnr2" path="res://models/primitives/Cube.glb" id="6_6324k"]
[ext_resource type="PackedScene" uid="uid://dhfsqarr05i1x" path="res://models/primitives/Octahedron.glb" id="7_0spjw"]
[ext_resource type="PackedScene" uid="uid://cdpt0aefcx05u" path="res://models/primitives/Dodecahedron.glb" id="8_agibt"]
[ext_resource type="PackedScene" uid="uid://b7yim76hp5g3n" path="res://models/primitives/Icohedron.glb" id="9_j7174"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0050o"]
shader = ExtResource("4_7cq3k")
shader_parameter/Color_Index = 0

[sub_resource type="LabelSettings" id="LabelSettings_rcv6y"]
resource_local_to_scene = true
font = ExtResource("5_ojbil")
font_size = 148

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_aiva0"]
sky_top_color = Color(0.811765, 0.847059, 0.894118, 1)

[sub_resource type="Sky" id="Sky_ishxn"]
sky_material = SubResource("ProceduralSkyMaterial_aiva0")

[sub_resource type="Environment" id="Environment_k0woi"]
background_mode = 2
sky = SubResource("Sky_ishxn")

[sub_resource type="World3D" id="World3D_tabw4"]
environment = SubResource("Environment_k0woi")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7mnd3"]
render_priority = 0
shader = ExtResource("3_1hq7j")
shader_parameter/Spawned = true
shader_parameter/Spawn_Time = null
shader_parameter/Fade_Start_Position = null
shader_parameter/Color_Index = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wepks"]
shader = ExtResource("4_7cq3k")
shader_parameter/Color_Index = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tnbb5"]
render_priority = 0
shader = ExtResource("3_1hq7j")
shader_parameter/Spawned = true
shader_parameter/Spawn_Time = null
shader_parameter/Fade_Start_Position = null
shader_parameter/Color_Index = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7gqtj"]
shader = ExtResource("4_7cq3k")
shader_parameter/Color_Index = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ipiyo"]
shader = ExtResource("4_7cq3k")
shader_parameter/Color_Index = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rnmh5"]
render_priority = 0
shader = ExtResource("3_1hq7j")
shader_parameter/Spawned = true
shader_parameter/Spawn_Time = null
shader_parameter/Fade_Start_Position = null
shader_parameter/Color_Index = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j3tex"]
shader = ExtResource("4_7cq3k")
shader_parameter/Color_Index = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x8jcv"]
shader = ExtResource("4_7cq3k")
shader_parameter/Color_Index = 3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sqnpr"]
render_priority = 0
shader = ExtResource("3_1hq7j")
shader_parameter/Spawned = true
shader_parameter/Spawn_Time = null
shader_parameter/Fade_Start_Position = null
shader_parameter/Color_Index = 3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0qtux"]
shader = ExtResource("4_7cq3k")
shader_parameter/Color_Index = 3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n1lco"]
shader = ExtResource("4_7cq3k")
shader_parameter/Color_Index = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_76e0f"]
render_priority = 0
shader = ExtResource("3_1hq7j")
shader_parameter/Spawned = true
shader_parameter/Spawn_Time = null
shader_parameter/Fade_Start_Position = null
shader_parameter/Color_Index = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_arits"]
shader = ExtResource("4_7cq3k")
shader_parameter/Color_Index = 4

[sub_resource type="Animation" id="Animation_bunx6"]
resource_name = "Spin"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Icohedron Count Container/SubViewportContainer/SubViewport/Icohedron/Icohedron2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(6.28319, 6.28319, 6.28319)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/Dodecahedron Count Container/SubViewportContainer/SubViewport/Dodecahedron/Dodecahedron2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(6.28319, 6.28319, 6.28319)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/Octahedron Count Container/SubViewportContainer/SubViewport/Octahedron/Octahedron2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(6.28319, 6.28319, 6.28319)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer/Cube Count Container/SubViewportContainer/SubViewport/Cube/Cube2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(6.28319, 6.28319, 6.28319)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer/Tetrahedron Count Container/SubViewportContainer/SubViewport/Tetrahedron/Tetrahedron2:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(6.28319, 6.28319, 6.28319)]
}

[sub_resource type="Animation" id="Animation_vnof6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Icohedron Count Container/SubViewportContainer/SubViewport/Icohedron/Icohedron2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/Dodecahedron Count Container/SubViewportContainer/SubViewport/Dodecahedron/Dodecahedron2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(6.28319, 6.28319, 6.28319)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/Octahedron Count Container/SubViewportContainer/SubViewport/Octahedron/Octahedron2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer/Cube Count Container/SubViewportContainer/SubViewport/Cube/Cube2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(6.28319, 6.28319, 6.28319)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer/Tetrahedron Count Container/SubViewportContainer/SubViewport/Tetrahedron/Tetrahedron2:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vyr01"]
_data = {
"RESET": SubResource("Animation_vnof6"),
"Spin": SubResource("Animation_bunx6")
}

[node name="Colors Settings" type="Control" node_paths=PackedStringArray("primitive_color_picker_0", "primitive_color_picker_1", "primitive_color_picker_2", "primitive_color_picker_3", "primitive_color_picker_4")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6xqr5")
primitive_color_picker_0 = NodePath("VBoxContainer/Tetrahedron Count Container/Primitive 1 Color Picker")
primitive_color_picker_1 = NodePath("VBoxContainer/Cube Count Container/Primitive 2 Color Picker")
primitive_color_picker_2 = NodePath("VBoxContainer/Octahedron Count Container/Primitive 3 Color Picker")
primitive_color_picker_3 = NodePath("VBoxContainer/Dodecahedron Count Container/Primitive 4 Color Picker")
primitive_color_picker_4 = NodePath("VBoxContainer/Icohedron Count Container/Primitive 5 Color Picker")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
offset_left = -15.68
offset_top = 7.11998
grow_horizontal = 2
grow_vertical = 2

[node name="Tetrahedron Count Container" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="+40" type="Label" parent="VBoxContainer/Tetrahedron Count Container"]
material = SubResource("ShaderMaterial_0050o")
layout_mode = 2
size_flags_horizontal = 3
text = "+40"
label_settings = SubResource("LabelSettings_rcv6y")
horizontal_alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/Tetrahedron Count Container"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/Tetrahedron Count Container/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_tabw4")
transparent_bg = true
handle_input_locally = false
size = Vector2i(433, 189)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="VBoxContainer/Tetrahedron Count Container/SubViewportContainer/SubViewport"]
fov = 30.0

[node name="Tetrahedron" parent="VBoxContainer/Tetrahedron Count Container/SubViewportContainer/SubViewport" instance=ExtResource("2_l53qm")]
transform = Transform3D(0.857372, -0.130245, 0.497945, 0.497945, 0.454713, -0.738435, -0.130245, 0.881063, 0.454713, 0, 0, -6)

[node name="Tetrahedron2" parent="VBoxContainer/Tetrahedron Count Container/SubViewportContainer/SubViewport/Tetrahedron" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_7mnd3")

[node name="Label" type="Label" parent="VBoxContainer/Tetrahedron Count Container"]
material = SubResource("ShaderMaterial_0050o")
layout_mode = 2
size_flags_horizontal = 3
text = "4/4"
label_settings = SubResource("LabelSettings_rcv6y")
horizontal_alignment = 1

[node name="Primitive 1 Color Picker" type="ColorPickerButton" parent="VBoxContainer/Tetrahedron Count Container"]
layout_mode = 2
size_flags_horizontal = 3
text = "Primitive Color"
edit_alpha = false

[node name="Cube Count Container" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="+40" type="Label" parent="VBoxContainer/Cube Count Container"]
material = SubResource("ShaderMaterial_wepks")
layout_mode = 2
size_flags_horizontal = 3
text = "+60"
label_settings = SubResource("LabelSettings_rcv6y")
horizontal_alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/Cube Count Container"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/Cube Count Container/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_tabw4")
transparent_bg = true
handle_input_locally = false
size = Vector2i(433, 190)
render_target_update_mode = 4

[node name="Cube" parent="VBoxContainer/Cube Count Container/SubViewportContainer/SubViewport" instance=ExtResource("6_6324k")]
transform = Transform3D(0.857372, -0.130245, 0.497945, 0.497945, 0.454713, -0.738435, -0.130245, 0.881063, 0.454713, 0, 0, -7)

[node name="Cube2" parent="VBoxContainer/Cube Count Container/SubViewportContainer/SubViewport/Cube" index="0"]
transform = Transform3D(0.57735, -1.00947e-07, 1.00947e-07, 1.00947e-07, 0.57735, -1.00947e-07, -1.00947e-07, 1.00947e-07, 0.57735, 0, 0, 0)
surface_material_override/0 = SubResource("ShaderMaterial_tnbb5")

[node name="Camera3D" type="Camera3D" parent="VBoxContainer/Cube Count Container/SubViewportContainer/SubViewport"]
fov = 30.0

[node name="Label" type="Label" parent="VBoxContainer/Cube Count Container"]
material = SubResource("ShaderMaterial_7gqtj")
layout_mode = 2
size_flags_horizontal = 3
text = "6/6"
label_settings = SubResource("LabelSettings_rcv6y")
horizontal_alignment = 1

[node name="Primitive 2 Color Picker" type="ColorPickerButton" parent="VBoxContainer/Cube Count Container"]
layout_mode = 2
size_flags_horizontal = 3
text = "Primitive Color"
edit_alpha = false

[node name="Octahedron Count Container" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="+40" type="Label" parent="VBoxContainer/Octahedron Count Container"]
material = SubResource("ShaderMaterial_ipiyo")
layout_mode = 2
size_flags_horizontal = 3
text = "+80"
label_settings = SubResource("LabelSettings_rcv6y")
horizontal_alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/Octahedron Count Container"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/Octahedron Count Container/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_tabw4")
transparent_bg = true
handle_input_locally = false
size = Vector2i(433, 189)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="VBoxContainer/Octahedron Count Container/SubViewportContainer/SubViewport"]
fov = 30.0

[node name="Octahedron" parent="VBoxContainer/Octahedron Count Container/SubViewportContainer/SubViewport" instance=ExtResource("7_0spjw")]
transform = Transform3D(0.857372, -0.130245, 0.497945, 0.497945, 0.454713, -0.738435, -0.130245, 0.881063, 0.454713, 0, 0, -6)

[node name="Octahedron2" parent="VBoxContainer/Octahedron Count Container/SubViewportContainer/SubViewport/Octahedron" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_rnmh5")

[node name="Label" type="Label" parent="VBoxContainer/Octahedron Count Container"]
material = SubResource("ShaderMaterial_j3tex")
layout_mode = 2
size_flags_horizontal = 3
text = "8/8"
label_settings = SubResource("LabelSettings_rcv6y")
horizontal_alignment = 1

[node name="Primitive 3 Color Picker" type="ColorPickerButton" parent="VBoxContainer/Octahedron Count Container"]
layout_mode = 2
size_flags_horizontal = 3
text = "Primitive Color"
edit_alpha = false

[node name="Dodecahedron Count Container" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="+40" type="Label" parent="VBoxContainer/Dodecahedron Count Container"]
material = SubResource("ShaderMaterial_x8jcv")
layout_mode = 2
size_flags_horizontal = 3
text = "+120"
label_settings = SubResource("LabelSettings_rcv6y")
horizontal_alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/Dodecahedron Count Container"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/Dodecahedron Count Container/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_tabw4")
transparent_bg = true
handle_input_locally = false
size = Vector2i(433, 190)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="VBoxContainer/Dodecahedron Count Container/SubViewportContainer/SubViewport"]
fov = 30.0

[node name="Dodecahedron" parent="VBoxContainer/Dodecahedron Count Container/SubViewportContainer/SubViewport" instance=ExtResource("8_agibt")]
transform = Transform3D(0.857372, -0.130245, 0.497945, 0.497945, 0.454713, -0.738435, -0.130245, 0.881063, 0.454713, 0, 0, -6)

[node name="Dodecahedron2" parent="VBoxContainer/Dodecahedron Count Container/SubViewportContainer/SubViewport/Dodecahedron" index="0"]
transform = Transform3D(1, -1.74846e-07, 1.74846e-07, 1.74846e-07, 1, -1.74846e-07, -1.74846e-07, 1.74846e-07, 1, 0, 0, 0)
surface_material_override/0 = SubResource("ShaderMaterial_sqnpr")

[node name="Label" type="Label" parent="VBoxContainer/Dodecahedron Count Container"]
material = SubResource("ShaderMaterial_0qtux")
layout_mode = 2
size_flags_horizontal = 3
text = "12/12"
label_settings = SubResource("LabelSettings_rcv6y")
horizontal_alignment = 1

[node name="Primitive 4 Color Picker" type="ColorPickerButton" parent="VBoxContainer/Dodecahedron Count Container"]
layout_mode = 2
size_flags_horizontal = 3
text = "Primitive Color"
edit_alpha = false

[node name="Icohedron Count Container" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="+40" type="Label" parent="VBoxContainer/Icohedron Count Container"]
material = SubResource("ShaderMaterial_n1lco")
layout_mode = 2
size_flags_horizontal = 3
text = "+200"
label_settings = SubResource("LabelSettings_rcv6y")
horizontal_alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/Icohedron Count Container"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/Icohedron Count Container/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_tabw4")
transparent_bg = true
handle_input_locally = false
size = Vector2i(433, 190)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="VBoxContainer/Icohedron Count Container/SubViewportContainer/SubViewport"]
fov = 30.0

[node name="Icohedron" parent="VBoxContainer/Icohedron Count Container/SubViewportContainer/SubViewport" instance=ExtResource("9_j7174")]
transform = Transform3D(0.857372, -0.130245, 0.497945, 0.497945, 0.454713, -0.738435, -0.130245, 0.881063, 0.454713, 0, 0, -6)

[node name="Icohedron2" parent="VBoxContainer/Icohedron Count Container/SubViewportContainer/SubViewport/Icohedron" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_76e0f")

[node name="Label" type="Label" parent="VBoxContainer/Icohedron Count Container"]
material = SubResource("ShaderMaterial_arits")
layout_mode = 2
size_flags_horizontal = 3
text = "20/20"
label_settings = SubResource("LabelSettings_rcv6y")
horizontal_alignment = 1

[node name="Primitive 5 Color Picker" type="ColorPickerButton" parent="VBoxContainer/Icohedron Count Container"]
layout_mode = 2
size_flags_horizontal = 3
text = "Primitive Color"
edit_alpha = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 0.35
libraries = {
"": SubResource("AnimationLibrary_vyr01")
}

[connection signal="color_changed" from="VBoxContainer/Tetrahedron Count Container/Primitive 1 Color Picker" to="." method="_on_primitive_1_color_picker_color_changed"]
[connection signal="color_changed" from="VBoxContainer/Cube Count Container/Primitive 2 Color Picker" to="." method="_on_primitive_2_color_picker_color_changed"]
[connection signal="color_changed" from="VBoxContainer/Octahedron Count Container/Primitive 3 Color Picker" to="." method="_on_primitive_3_color_picker_color_changed"]
[connection signal="color_changed" from="VBoxContainer/Dodecahedron Count Container/Primitive 4 Color Picker" to="." method="_on_primitive_4_color_picker_color_changed"]
[connection signal="color_changed" from="VBoxContainer/Icohedron Count Container/Primitive 5 Color Picker" to="." method="_on_primitive_5_color_picker_color_changed"]

[editable path="VBoxContainer/Tetrahedron Count Container/SubViewportContainer/SubViewport/Tetrahedron"]
[editable path="VBoxContainer/Cube Count Container/SubViewportContainer/SubViewport/Cube"]
[editable path="VBoxContainer/Octahedron Count Container/SubViewportContainer/SubViewport/Octahedron"]
[editable path="VBoxContainer/Dodecahedron Count Container/SubViewportContainer/SubViewport/Dodecahedron"]
[editable path="VBoxContainer/Icohedron Count Container/SubViewportContainer/SubViewport/Icohedron"]
